# omniread

./: .gitignore  README.md  flutter_rust_bridge.yaml  mise.toml  pubspec.yaml
docs/: RULE.md  (+3 more)
rust/: Cargo.toml
rust/benches/: js_runtime_bench.rs
rust/src/: lib.rs
rust/src/html_parser/: context.rs  dom.rs  js_runtime.rs  mod.rs  rule.rs  rule_parser.rs
rust/src/js_engine/: mod.rs
rust/src/rule_engine/: mod.rs  rule.rs  rule_parser.rs
rust/tests/: content_type_tests.rs  context_tests.rs  html_parser_tests.rs  js_api_tests.rs  rule_array_tests.rs  rule_chain_tests.rs  rule_parser_tests.rs
rust/tests/content_type/: content_type_tests.rs
rust/tests/context/: context_tests.rs
rust/tests/context/fixtures/: chapter_list_p2.html  paginated_content_p2.html
rust/tests/fixtures/: anime_single_page.html  chapter_list_p1.html  jianlai_rule.yaml  manga_chapter_scroll.html  manga_info.html  manga_rule.yaml  novel_info.html  paginated_content_p1.html  paginated_content_p3.html  sao_chapter_content.html  zhetian_chapter_p1.html  zhetian_chapter_p2.html  zhetian_chapter_p3.html  zhetian_novel_info.html  zhetian_novel_info.json
rust/tests/js_api/: js_api_tests.rs
rust/tests/js_api/fixtures/: chapter_content.html  parse_chapters.js  parse_novel_info.js  test_basic.html
rust/tests/rule/: content_type_tests.rs  rule_array_tests.rs  rule_chain_tests.rs  rule_parser_tests.rs
rust/tests/rule/fixtures/anime/: jianlai_anime_page.html
rust/tests/rule/fixtures/common/: parse_chapter_content.js
rust/tests/rule/fixtures/light_novel/: sao_novel_info.html  sao_rule.yaml
(+41 files in other folders)
